tests/typescript_library_definition_support/typescript_library_definition_support.exp
Error ----------------------------------------------------------------------------------------------------- test.js:17:7

Cannot call `greet` with `42` bound to `name` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:17:7
   17| greet(42) as string; // ERROR — number not string
             ^^ [1]

References:
   node_modules/my-lib/index.d.ts:1:37
    1| export declare function greet(name: string): string;
                                           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:23:9

Cannot call `compute` with `"x"` bound to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:23:9
   23| compute("x") as number; // ERROR — string not number
               ^^^ [1]

References:
   node_modules/my-lib-js/math.d.ts:1:36
    1| export declare function compute(x: number): number;
                                          ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:27:1

Cannot cast `value` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:27:1
   27| value as string; // ERROR — number not string (d.ts says number)
       ^^^^^

References:
   node_modules/my-lib-shadow/index.d.ts:1:29
    1| export declare const value: number;
                                   ^^^^^^ [1]
   test.js:27:10
   27| value as string; // ERROR — number not string (d.ts says number)
                ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:35:1

Cannot cast `foo` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:35:1
   35| foo as string; // ERROR — number not string (types.d.ts says number)
       ^^^

References:
   node_modules/pkg-with-types/types.d.ts:1:27
    1| export declare const foo: number;
                                 ^^^^^^ [1]
   test.js:35:8
   35| foo as string; // ERROR — number not string (types.d.ts says number)
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:39:1

Cannot cast `bar` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:39:1
   39| bar as string; // ERROR — number not string (types.d.ts says number)
       ^^^

References:
   node_modules/pkg-with-typings/types.d.ts:1:27
    1| export declare const bar: number;
                                 ^^^^^^ [1]
   test.js:39:8
   39| bar as string; // ERROR — number not string (types.d.ts says number)
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:43:1

Cannot cast `baz` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:43:1
   43| baz as string; // ERROR — number not string (types.d.ts says number)
       ^^^

References:
   node_modules/pkg-with-exports-types/types.d.ts:1:27
    1| export declare const baz: number;
                                 ^^^^^^ [1]
   test.js:43:8
   43| baz as string; // ERROR — number not string (types.d.ts says number)
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:47:1

Cannot cast `qux` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:47:1
   47| qux as string; // ERROR — number not string (exports types.d.ts says number)
       ^^^

References:
   node_modules/pkg-with-exports-and-types/types.d.ts:1:27
    1| export declare const qux: number;
                                 ^^^^^^ [1]
   test.js:47:8
   47| qux as string; // ERROR — number not string (exports types.d.ts says number)
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:51:1

Cannot cast `val` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:51:1
   51| val as string; // ERROR — number not string (index.d.ts says number)
       ^^^

References:
   node_modules/pkg-with-types-extensionless/index.d.ts:1:27
    1| export declare const val: number;
                                 ^^^^^^ [1]
   test.js:51:8
   51| val as string; // ERROR — number not string (index.d.ts says number)
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:55:1

Cannot cast `nested` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:55:1
   55| nested as string; // ERROR — number not string (types.d.ts says number)
       ^^^^^^

References:
   node_modules/pkg-with-nested-export-types/types.d.ts:1:30
    1| export declare const nested: number;
                                    ^^^^^^ [1]
   test.js:55:11
   55| nested as string; // ERROR — number not string (types.d.ts says number)
                 ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:59:1

Cannot cast `mtsVal` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:59:1
   59| mtsVal as string; // ERROR — number not string (types.d.mts says number)
       ^^^^^^

References:
   node_modules/pkg-with-nested-export-types-mts/types.d.mts:1:30
    1| export declare const mtsVal: number;
                                    ^^^^^^ [1]
   test.js:59:11
   59| mtsVal as string; // ERROR — number not string (types.d.mts says number)
                 ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:63:1

Cannot cast `ctsVal` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:63:1
   63| ctsVal as string; // ERROR — number not string (types.d.cts says number)
       ^^^^^^

References:
   node_modules/pkg-with-nested-export-types-cts/types.d.cts:1:30
    1| export declare const ctsVal: number;
                                    ^^^^^^ [1]
   test.js:63:11
   63| ctsVal as string; // ERROR — number not string (types.d.cts says number)
                 ^^^^^^ [2]



Found 11 errors
